Update benchmarker to work with tracks.
